[project]
name = "tough-client"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "tenacity>=9.0.0",
    "uvicorn==0.34.0",
]

[tool.poetry]
name = "tough-client"
version = "0.1.0"
description = ""
authors = ["Actively Engineering <engineering@actively.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
click = ">=8.1.8"
fastapi = ">=0.115.12"
httpx = ">=0.28.1"
tenacity = ">=9.0.0"
uvicorn = "0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.uv]
package = false
